# blif2bench

./: .gitignore  CMakeLists.txt  README.md  config.toml  main.py
cpp/: CMakeLists.txt  configure_release.sh
cpp/data/: config.toml
cpp/include/: Bliffile.h  Blifile.h  Blifparse.h  Gate.h  Str_cond.h
cpp/src/: Blif2bench.cpp  Bliffile.cpp  Blifparse.cpp  Gate.cpp  Str_cond.cpp  blif2bench.cpp
include/: Bliffile.h  Blifparse.h  Log.h  Str_cond.h
python/: blifparse.py  main.py
src/: Blif2bench.cpp  Bliffile.cpp  Blifparse.cpp  Log.cpp  Str_cond.cpp
